<resources>
    <string name="app_name">HomeWork1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="police">Police</string>
</resources>
