<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="bottom"
            android:textAlignment="center">

            <Button
                android:id="@+id/white_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/white"/>
            <Button
                android:id="@+id/grey1_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/gray"/>
            <Button
                android:id="@+id/red_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/red"/>
            <Button
                android:id="@+id/green_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/green"/>
            <Button
                android:id="@+id/blue_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/blue"/>
            <Button
                android:id="@+id/police_button"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/police"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>